--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>MAI'S WEBSITE</title>
 </head>
 <body>
+	<h1>hi everyone its mai's web</h1>
+	<h3>this is a smaller text</h3>
+	<p>paragraph is written here</p>
+
+<a href="{{url_for('store')}}">linking yo</a>
+
 
 
 </body>
