--- a/templates/store.html
+++ b/templates/store.html
@@ -4,7 +4,12 @@
 	<title></title>
 </head>
 <body>
+<a href="{{url_for('burger')}}">linking 1 time babem</a>
+<a href="{{url_for('burger')}}">linking 2 times kapaow</a>
+<a href="{{url_for('burger')}}">linking 3 times bam</a>
+<h1>title okkk</h1>
+<img src="https://i.pinimg.com/736x/9c/4d/b8/9c4db8112505ee7d9a13667a41cc4fda.jpg" alt="picture boom">
 
-
+ <button type="button"><a href = "{{url_for('cart')}}">Adopt Me!</a></button> 
 </body>
 </html>
