--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
 <body>
+
+<h2>HTML Forms</h2>
+
+<form action="/action_page.php">
+  name:<br>
+  <input type="text" name="name" value="hamburger">
+  <br>
+  price:<br>
+  <input type="text" price="price" value="25">
+  <br><br>
+  <input type="submit" picture_link="picture_link">
+   <br><br>
+  <input type="submit" description="description">
+</form> 
 
 
 </body>
