--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,11 @@
 	<title>MAI'S WEBSITE</title>
 </head>
 <body>
-	<h1>hi everyone its mai's web</h1>
-	<h3>this is a smaller text</h3>
-	<p>paragraph is written here</p>
+	<h1>MAI'S HAMBURGERS</h1>
+	<h3>maximum taste, minimum price</h3>
+	<p>hi every-one, wanna taste the most amazing hamburger you have ever tasted?</p>
 
-<a href="{{url_for('store')}}">linking yo</a>
+<a href="{{url_for('store')}}">click here</a>
 
 
 
