--- a/templates/store.html
+++ b/templates/store.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Mai's hamburgers</title>
 </head>
 <body>
 <h1>hello {{name}}</h1>
 
-<a href="{{url_for('home')}}">linking 1 time babem</a>
-<a href="{{url_for('store')}}">linking 2 times kapaow</a>
-<a href="{{url_for('store')}}">linking 3 times bam</a>
+<a href="{{url_for('home')}}">home</a>
+<a href="{{url_for('store')}}">store</a>
+<a href="{{url_for('store')}}">store</a>
 {%for i in p%}
 <h1>{{i.name}}</h1>
 <img src="{{i.picture_link}}" alt="double hamburger">
 
 
 
- <button type="button"><a href = "{{url_for('cart')}}">eat me!</a></button> 
+ <button type="button"><a href = "{{url_for('cart')}}">add to cart</a></button> 
+ <h1>{{i.id}}</h1>
 {%endfor%}
+
+
 
 </body>
 </html>
