--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 	<title>MAI'S WEBSITE</title>
 </head>
 <body>
-	<h1>MAI'S HAMBURGERS</h1>
+	<h1>MAI'S HAMBURGER</h1>
 	<h3>maximum taste, minimum price</h3>
 	<p>hi every-one, wanna taste the most amazing hamburger you have ever tasted?</p>
 
